--- a/Foundation.Graph.Tests/Foundation.Graph.Tests.csproj
+++ b/Foundation.Graph.Tests/Foundation.Graph.Tests.csproj
@@ -20,7 +20,7 @@
 
   <ItemGroup>
     <Reference Include="Foundation">
-      <HintPath>..\..\Foundation\Foundation6\bin\Debug\net6.0\Foundation.dll</HintPath>
+      <HintPath>..\..\Foundation\Foundation\Foundation6\bin\Debug\net6.0\Foundation.dll</HintPath>
     </Reference>
   </ItemGroup>
 
