refactor(Foundation.Graph): interfaces

--- a/Foundation.Graph.Tests/Foundation.Graph.Tests.csproj
+++ b/Foundation.Graph.Tests/Foundation.Graph.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -28,7 +28,7 @@
 
   <ItemGroup>
     <Reference Include="Foundation">
-      <HintPath>..\..\Foundation\Foundation\Foundation6\bin\Debug\net6.0\Foundation.dll</HintPath>
+      <HintPath>..\..\..\Foundation\Foundation\Foundation6\bin\$(Configuration)\net6.0\Foundation.dll</HintPath>
     </Reference>
   </ItemGroup>
 
