--- a/Foundation.Graph/Foundation.Graph.csproj
+++ b/Foundation.Graph/Foundation.Graph.csproj
@@ -1,18 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+	  <TargetFrameworks>net6.0;net8.0</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 	<LangVersion>latest</LangVersion>
-    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <PackageOutputPath>$(LOCAL_NUGET)\</PackageOutputPath>
     <Authors>Markus Raufer</Authors>
-    <Version>1.0.0-rc.18</Version>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Foundation" Version="1.0.0-rc.95" />
+    <PackageReference Include="Foundation" Version="1.3.2" />
   </ItemGroup>
 
 </Project>
